--- a/TestProject_1/package.json
+++ b/TestProject_1/package.json
@@ -21,11 +21,9 @@
     "url": "https://github.com/fugazi/Cypress-Opencart/issues"
   },
   "homepage": "https://github.com/fugazi/Cypress-Opencart#readme",
-  "dependencies": {
-    "cypress": "^12.17.3"
-  },
   "devDependencies": {
     "axe-core": "^4.7.2",
+    "cypress": "^13.1.0",
     "cypress-axe-core": "^2.0.0"
   }
 }
