--- a/TestProject_1/package.json
+++ b/TestProject_1/package.json
@@ -22,8 +22,9 @@
   },
   "homepage": "https://github.com/fugazi/Cypress-Opencart#readme",
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "axe-core": "^4.10.3",
-    "cypress": "^14.4.1",
+    "cypress": "^14.5.0",
     "cypress-axe-core": "^2.0.0"
   }
 }
